Fix: Rename image files (remove spaces) and update repository URL

--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://rahmatdial-prjct.github.io/portofolio/" />
+    <meta property="og:url" content="https://rahmatdialtelkom.github.io/portofolio/" />
     <meta property="og:title" content="Rahmat Dial - IT Enthusiast & Digital Creator" />
     <meta property="og:description" content="Portfolio of Rahmat Dial - IT Enthusiast & Digital Creator specializing in web development, networking, and digital content creation." />
-    <meta property="og:image" content="https://rahmatdial-prjct.github.io/portofolio/images/profile.jpg" />
+    <meta property="og:image" content="https://rahmatdialtelkom.github.io/portofolio/images/profile.jpg" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://rahmatdial-prjct.github.io/portofolio/" />
+    <meta property="twitter:url" content="https://rahmatdialtelkom.github.io/portofolio/" />
     <meta property="twitter:title" content="Rahmat Dial - IT Enthusiast & Digital Creator" />
     <meta property="twitter:description" content="Portfolio of Rahmat Dial - IT Enthusiast & Digital Creator specializing in web development, networking, and digital content creation." />
-    <meta property="twitter:image" content="https://rahmatdial-prjct.github.io/portofolio/images/profile.jpg" />
+    <meta property="twitter:image" content="https://rahmatdialtelkom.github.io/portofolio/images/profile.jpg" />
 
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
